# PrepareLoraKit

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  TODO.md  main.py  package-lock.json  package.json  pyproject.toml  requirements-windows.txt  requirements.txt
configs/caption_prompts/: full_image__default.yaml  region__default_literal.yaml
configs/examples/: network.yaml
configs/networks/: flux_klein_9b.yaml
configs/projects/: example.yaml
docs/: caption-step.md  code-map.html  complexity-technical-debt.md  core.md  prepare_lora_kit_dataset_workflow.excalidraw  project-graph.html  project-graph.md  ui-design.md  ui-migration.md
docs/issues/: cuda-mismatch.md
models/SEEDVR2/: .validation_cache.json
prepare_lora_kit/: cancellation.py  cli.py  interaction.py  invoke.py  pipeline.py  pipeline_validation.py  report.py
prepare_lora_kit/caption_prompts/: __init__.py  prompt_registry.py  registry.py
prepare_lora_kit/cli/: __init__.py  _shared.py  networks.py  projects.py  run.py  step.py  ui.py
prepare_lora_kit/embedding/: __init__.py  catalog.py  loaders.py  vram.py
prepare_lora_kit/invoke/: __init__.py  audit_step.py  bucket_dry_run_step.py  bucket_pools_check_step.py  caption_bbox_step.py  caption_step.py  config_gen_step.py  curate_step.py  export_step.py  import_step.py  (+8 more)
prepare_lora_kit_pipeline/: configuration.py
prepare_lora_kit_ui/: bridge.py  dev_fixture.py  media.py  paths.py  shutdown_diagnostics.py  windows_shutdown.py
requirements/: base.txt  seedvr2-linux.txt  seedvr2-windows.txt  seedvr2.txt
tests/: run_pytest.py
(+484 files in other folders)
